--- a/pemFioi/taskStyles-0.1.css
+++ b/pemFioi/taskStyles-0.1.css
@@ -38,6 +38,10 @@ button, input[type=button] {
 	border: 1px solid black;
 }
 
+.contentCentered {
+   text-align: center;
+}
+
 #task h1,
 .question h1,
 #solution {
@@ -55,13 +59,13 @@ button, input[type=button] {
    color: red;
 }
 
-.tabs-menu {
+#tabsMenu {
    list-style: none;
    padding: 0;
    width: 100%;
    border-bottom: 2px solid #aaa;
 }
-.tabs-menu li {
+#tabsMenu li {
    display: inline-block;
    min-width: 150px;
    margin-right: 10px;
@@ -70,56 +74,56 @@ button, input[type=button] {
    border-bottom: 0;
    text-align: center;
 }
-.tabs-menu li.locked-level {
+#tabsMenu li.locked_level {
    background: #666;
 }
-.tabs-menu li.current {
+#tabsMenu li.current {
    margin-bottom: -2px;
    padding-bottom: 2px;
    background: #fff;
 }
-.tabs-menu li a {
+#tabsMenu li a {
    display: block;
    padding: 4px;
    color: #000;
    text-decoration: none; 
 }
-.tabs-menu li.locked-level a {
+#tabsMenu li.locked_level a {
    color: #bbb;
 }
-.tabs-menu li a:focus {
+#tabsMenu li a:focus {
    outline: none;
 }
-.tabs-menu li:not(.current) a:active {
+#tabsMenu li:not(.current) a:active {
    background: #c8c8d8;
 }
-.tabs-menu li.locked-level a:active {
+#tabsMenu li.locked_level a:active {
    background: #7c6862;
 }
-.tabs-menu.stars li a {
+#tabsMenu.stars li a {
    padding: 8px;
    font-size: 1.1em;
 }
 
-.star-container {
+.star_container {
    position: relative;
    display: inline-block;
    width: 18px;
    height: 18px;
    vertical-align: middle;
 }
-.star-container > span {
+.star_container > span {
    position: absolute;
    left: 0;
    visibility: hidden;
 }
-.locked-level span.special-star,
-.useless-level span.special-star,
-.open-level span.empty-star,
-span.full-star.shown-star {
+.locked_level span.special_star,
+.useless_level span.special_star,
+.open_level span.empty_star,
+span.full_star.shown_star {
    visibility: visible;
 }
-span.full-star {
+span.full_star {
    z-index: 1;
 }
 
