--- a/pemFioi/taskStyles-0.1.css
+++ b/pemFioi/taskStyles-0.1.css
@@ -60,14 +60,24 @@ button, input[type="button"] {
    color: red;
 }
 
+#tabsContainer {
+   position: relative;
+}
 #tabsMenu {
-   list-style: none;
+   margin: 0;
    padding: 0;
+   list-style: none;
+   overflow: hidden;
+}
+#tabsMenu + div {
+   position: absolute;
+   z-index: -1;
+   bottom: 0;
    width: 100%;
    border-bottom: 2px solid #aaa;
 }
 #tabsMenu li {
-   display: inline-block;
+   float: left;
    min-width: 150px;
    margin-right: 10px;
    background: #ddd;
@@ -79,7 +89,6 @@ button, input[type="button"] {
    background: #666;
 }
 #tabsMenu li.current {
-   margin-bottom: -2px;
    padding-bottom: 2px;
    background: white;
 }
@@ -143,6 +152,10 @@ span.fullStar {
    display: none;
    margin: .5em 0;
 }
+#tabMessage > div {
+   position: relative;
+   padding: 8px;
+}
 #tabMessage.floatingMessage {
    position: fixed;
    z-index: 101;
@@ -153,23 +166,20 @@ span.fullStar {
    background: rgba(0, 0, 0, .7);
 }
 #tabMessage.floatingMessage > div {
-   padding: 8px;
    max-width: 500px;
    margin: 10% auto;
    border: 2px solid black;
    background: white;
 }
-#tabMessage > div > img {
-   float: left;
-}
 #tabMessage > div > img:first-child {
+   float: left;
    width: 65px;
 }
 #tabMessage > div > img + img {
-   position: relative;
-   z-index: 100;
-   padding-top: 20px;
-   padding-left: 4px;
+   position: absolute;
+   z-index: 1;
+   left: 77px;
+   top: 16px;
 }
 #tabMessage > div > div {
    margin-left: 92px;
