adding space at the bottom of tasks to allow scrolling on android tablets when keyboard is up.

--- a/pemFioi/taskStyles-0.1.css
+++ b/pemFioi/taskStyles-0.1.css
@@ -11,6 +11,10 @@
   -ms-touch-action: none;
 }
 
+#task {
+   padding-bottom: 400px; /* to have some room for the keyboard on android tablets */
+}
+
 #task h1 {
    display:none;
 }
