--- a/pemFioi/taskStyles-0.1.css
+++ b/pemFioi/taskStyles-0.1.css
@@ -176,6 +176,7 @@ h1 span {
    right: 0;
    bottom: 0;
    left: 0;
+   background: gray;
    background: rgba(0, 0, 0, .5);
 }
 #tabMessage.floatingMessage .container {
@@ -186,7 +187,7 @@ h1 span {
    background: white;
 }
 #tabMessage img.beaver {
-   float: left;
+   position: absolute;
    width: 90px;
 }
 #tabMessage img.messageArrow {
