--- a/pemFioi/taskStyles-0.1.css
+++ b/pemFioi/taskStyles-0.1.css
@@ -43,9 +43,6 @@ button, input[type="button"] {
    text-align: center;
 }
 
-#task {
-   padding-bottom: 400px; /* to have some room for the keyboard on android tablets */
-}
 #task h1,
 .question h1,
 #solution {
@@ -77,7 +74,7 @@ button, input[type="button"] {
 }
 #tabsMenu .li {
    display: inline-block;
-   min-width: 150px;
+   width: 165px;
    margin: 0 20px;
    background: #88BB88;
    border: 2px solid #8d9daa;
@@ -162,8 +159,8 @@ h1 .stars {
 }
 #popupMessage.floatingMessage .container {
    min-height: 100px;
-   max-width: 500px;
-   margin: 10% auto;
+   max-width: 600px;
+   margin: 400px auto;
    border: 2px solid black;
    background: white;
 }
