add difficultyWarning feature

--- a/pemFioi/taskStyles-0.1.css
+++ b/pemFioi/taskStyles-0.1.css
@@ -46,7 +46,7 @@ textarea {
    text-align: center;
 }
 
-.warning-header { 
+.warningHeader { 
    margin: 10px 0px 10px 0px; 
    padding: 10px 10px 10px 10px; 
    background: #FFAAAA; 
