ligher ping for headerWarning

--- a/pemFioi/taskStyles-0.1.css
+++ b/pemFioi/taskStyles-0.1.css
@@ -49,7 +49,7 @@ textarea {
 .warningHeader { 
    margin: 10px 0px 10px 0px; 
    padding: 10px 10px 10px 10px; 
-   background: #FFDDDD; 
+   background: #FFEEEE; 
    /*font-weight: bold;*/
    border: 2px solid black; 
    border-radius: 6px;
