nouvelle interface d'exécution

--- a/pemFioi/blockly_lib.css
+++ b/pemFioi/blockly_lib.css
@@ -24,15 +24,6 @@ body > * {
 #blocklyContainer {
 	box-sizing: border-box;
 }
-@media screen and (min-width: 800px) {
-	#taskIntro {
-		float: left;
-		max-width: calc(100% - 450px);
-	}
-	#gridContainer {
-		float: right;
-	}
-}
 @media screen and (min-width: 1025px) {
 	#taskIntro {
 		float: none;
@@ -76,4 +67,125 @@ body > * {
 #errors {
 	color:red;
 	padding-top:10px;
+}
+
+/*
+	Run test speed selector
+	Rip-off of bootstrap btn and btn-group rules
+*/
+#selectSpeed {
+	margin-bottom: 20px;
+}
+.btn,
+input[type=button] {
+	display: inline-block;
+	padding: 6px 12px;
+	margin-bottom: 0;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1.42857143;
+	text-align: center;
+	white-space: nowrap;
+	vertical-align: middle;
+	-ms-touch-action: manipulation;
+	touch-action: manipulation;
+	cursor: pointer;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+	background-image: none;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	color: #333;
+	background-color: #fff;
+	border-color: #ccc;
+}
+.btn-group {
+	position: relative;
+	display: inline-block;
+	vertical-align: middle;
+}
+.btn-group-vertical>.btn,
+.btn-group>.btn {
+	position: relative;
+	float: left;
+}
+.btn-group .btn+.btn,
+.btn-group .btn+.btn-group,
+.btn-group .btn-group+.btn,
+.btn-group .btn-group+.btn-group {
+	margin-left: -1px;
+}
+.btn-group>.btn:first-child {
+	margin-left: 0;
+}
+.btn-group>.btn:first-child:not(:last-child) {
+	border-top-right-radius: 0;
+	border-bottom-right-radius: 0;
+}
+.btn-group>.btn:last-child:not(:first-child) {
+	border-top-left-radius: 0;
+	border-bottom-left-radius: 0;
+}
+.btn-group>.btn:not(:first-child):not(:last-child) {
+	border-radius: 0;
+}
+.btn-group>.btn.active,
+.btn-group>.btn:active,
+.btn-group>.btn:focus,
+.btn-group>.btn:hover {
+	z-index: 2;
+}
+.btn-primary {
+	color: #fff;
+	background-color: #337ab7;
+	border-color: #2e6da4;
+}
+.btn-primary:hover {
+	color: #fff;
+	background-color: #286090;
+	border-color: #204d74;
+}
+.btn-icon {
+	font-family: 'Courier New', Inconsolata, 'Roboto Mono', 'PT Mono', 'Ubuntu', monospace;
+}
+#blocklyTopToolbar span {
+	float: left;
+	padding-top: 14px;
+}
+#saveOrLoad {
+	float: right;
+	margin-bottom: 5px;
+}
+
+/* Save or load Modal */
+#saveOrLoadModal {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: #777;
+	background-color: rgba(0,0,0,0.7);
+	transition: all 250ms;
+}
+#saveOrLoadModal .modal {
+	width: 800px;
+	margin: 0 auto;
+	background: #fff;
+	border: 1px solid #ccc;
+	border-radius: 6px;
+	padding: 20px;
+	position: relative;
+}
+#saveOrLoadModal .btn.close {
+	border: none;
+	font-weight: bold;
+	font-size: 24px;
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	color: #a7a6a6;
+	line-height: 1em;
 }
