quickAlgo: Fix display/behavior issues
* Fix test case change behavior when executing another test
* Case on variable names in reportValue
* Display that test case headers are actually clickable

--- a/pemFioi/quickAlgo/quickAlgo.css
+++ b/pemFioi/quickAlgo/quickAlgo.css
@@ -364,3 +364,10 @@ input[type=button] {
 .panel-body:after {
   clear: both;
 }
+#testSelector .panel-heading {
+  border: 1px solid transparent;
+}
+#testSelector .panel-heading:hover {
+  cursor: pointer;
+  border: 1px solid #000000;
+}
