--- a/pemFioi/progTask.css
+++ b/pemFioi/progTask.css
@@ -1,41 +1,66 @@
-    .readOnlySource .ace_cursor {
-       border-left:0px;
-    }
-    body {
-      margin-top:20px;
-      width: 764px;
-      margin-right: auto;
-      margin-left: auto;
-    }
-    #choose-view {
-      margin-left:auto;
-      margin-right: auto;
-      margin-bottom: 40px;
-      font-size:14pt;
-    }
-    #sourcesEditor {
-       margin-bottom:20px;
-    }
-    #testsEditor {
-       margin-bottom:20px;
-    }
-    #submission {
-       margin-top: 25px;
-    }
-    .hint {
-      margin-bottom: 10px;
-      margin-top: 20px;
-    }
-    .glyphicon.spinning {
-      animation: spin 2.3s infinite linear;
-      transform-origin: 48% 50%;
-    }
-    .readOnlySource {
-       margin-left: 30px;
-       margin-top:20px;
-       margin-bottom:20px;
-    }
-    @keyframes spin {
-      from { transform: scale(1) rotate(0deg); }
-      to { transform: scale(1) rotate(360deg); }
-    }
+.readOnlySource .ace_cursor {
+   border-left:0px;
+}
+body {
+  margin-top:20px;
+  width: 764px;
+  margin-right: auto;
+  margin-left: auto;
+}
+#choose-view {
+  margin-left:auto;
+  margin-right: auto;
+  margin-bottom: 40px;
+  font-size:14pt;
+}
+#sourcesEditor {
+   margin-bottom:20px;
+}
+#testsEditor {
+   margin-bottom:20px;
+}
+#submission {
+   margin-top: 25px;
+}
+#dualView {
+   position: relative;
+   width: 100%;
+}
+#dualViewLeft {
+   display: inline-block;
+   width: 49%;
+   padding-right: 4px;
+}
+#dualViewRight {
+   display: inline-block;
+   width: 49%;
+   height: 100%;
+   position: absolute;
+   top: 0px;
+   left: 50%;
+   border-left: 1px solid black;
+   padding-left: 4px;
+   padding-top: 40px;
+}
+#dualViewLeftContent, #dualViewRightContent {
+   margin-left: auto;
+   margin-right: auto;
+   width: 772px;
+}
+.hint {
+  margin-bottom: 10px;
+  margin-top: 20px;
+}
+.glyphicon.spinning {
+  animation: spin 2.3s infinite linear;
+  transform-origin: 48% 50%;
+}
+.readOnlySource {
+   margin-left: 30px;
+   margin-top:20px;
+   margin-bottom:20px;
+}
+@keyframes spin {
+  from { transform: scale(1) rotate(0deg); }
+  to { transform: scale(1) rotate(360deg); }
+}
