--- a/pemFioi/quickAlgo/quickAlgo.css
+++ b/pemFioi/quickAlgo/quickAlgo.css
@@ -54,11 +54,6 @@ body > * {
 	max-width: 400px;
 }
 
-.blocklyCapacity {
-	display: inline-block;
-	width: 24px;
-	text-align: right;
-}
 #testCaseName {
 	padding-left: 20px;
 	padding-right: 20px;
@@ -145,6 +140,13 @@ input[type=button] {
 .btn-group>.btn:hover {
 	z-index: 2;
 }
+.btn.btn-xs {
+    padding: 1px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+}
+
 .btn-primary {
 	color: #fff;
 	background-color: #337ab7;
@@ -155,6 +157,16 @@ input[type=button] {
 	background-color: #286090;
 	border-color: #204d74;
 }
+.btn-default {
+	color: #333;
+	background-color: #fff;
+	border-color: #ccc;
+}
+.btn-default:hover {
+	color: #333;
+	background-color: #e6e6e6;
+	border-color: #adadad;
+}
 .btn-icon {
 	font-family: 'Courier New', Inconsolata, 'Roboto Mono', 'PT Mono', 'Ubuntu', monospace;
 }
@@ -162,9 +174,8 @@ input[type=button] {
 	float: left;
 	padding-top: 14px;
 }
-#saveOrLoad {
+#editorButtons {
 	float: right;
-	margin-bottom: 5px;
 }
 
 /* Save or load Modal */
