--- a/pemFioi/taskStyles-0.1.css
+++ b/pemFioi/taskStyles-0.1.css
@@ -31,7 +31,97 @@ input[type="button"] {
    line-height: 1.2;
    font-size: 16px;
 }
+.btn,
+input[type=button] {
+   display: inline-block;
+   padding: 6px 12px;
+   margin-bottom: 0;
+   font-size: 14px;
+   font-weight: 400;
+   line-height: 1.42857143;
+   text-align: center;
+   white-space: nowrap;
+   vertical-align: middle;
+   -ms-touch-action: manipulation;
+   touch-action: manipulation;
+   cursor: pointer;
+   -webkit-user-select: none;
+   -moz-user-select: none;
+   -ms-user-select: none;
+   user-select: none;
+   background-image: none;
+   border: 1px solid transparent;
+   border-radius: 4px;
+   color: #333;
+   background-color: #fff;
+   border-color: #ccc;
+}
+.btn-group {
+   position: relative;
+   display: inline-block;
+   vertical-align: middle;
+}
+.btn-group-vertical>.btn,
+.btn-group>.btn {
+   position: relative;
+   float: left;
+}
+.btn-group .btn+.btn,
+.btn-group .btn+.btn-group,
+.btn-group .btn-group+.btn,
+.btn-group .btn-group+.btn-group {
+   margin-left: -1px;
+}
+.btn-group>.btn:first-child {
+   margin-left: 0;
+}
+.btn-group>.btn:first-child:not(:last-child) {
+   border-top-right-radius: 0;
+   border-bottom-right-radius: 0;
+}
+.btn-group>.btn:last-child:not(:first-child) {
+   border-top-left-radius: 0;
+   border-bottom-left-radius: 0;
+}
+.btn-group>.btn:not(:first-child):not(:last-child) {
+   border-radius: 0;
+}
+.btn-group>.btn.active,
+.btn-group>.btn:active,
+.btn-group>.btn:focus,
+.btn-group>.btn:hover {
+   z-index: 2;
+}
+.btn.btn-xs {
+    padding: 1px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+}
 
+.btn-primary {
+   color: #fff;
+   background-color: #337ab7;
+   border-color: #2e6da4;
+}
+.btn-primary:hover {
+   color: #fff;
+   background-color: #286090;
+   border-color: #204d74;
+}
+.btn-default {
+   color: #333;
+   background-color: #fff;
+   border-color: #ccc;
+}
+.btn-default:hover {
+   color: #333;
+   background-color: #e6e6e6;
+   border-color: #adadad;
+}
+.btn-icon {
+   font-family: 'Courier New', Inconsolata, 'Roboto Mono', 'PT Mono', 'Ubuntu', monospace;
+}
 .selectable,
 input,
 textarea {
